k8s-file/back-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: exam
spec:
  selector:
    app: backend-deployment
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
