k8s-file/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  selector:
    app: frontend-deployment
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 2000
      targetPort: 80
