k8s-file/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: exam
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
